Updated mafPipePolyline,polyline spline management, new GUI, scalar management from mafPipeGenericPolydata is now a sub class

--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -179,6 +179,8 @@ SET(PROJECT_SRCS
   
   mafPipeRayCast.cpp
   mafPipeRayCast.h
+	
+	mafPipeWithScalar.cpp mafPipeWithScalar.h
 )
 
 IF (MAF_USE_CRYPTO)
