Removed mafPipeVolumeSlice, now mafPipeVolumeSlice_BES is used SetSlice(origin,xVect,yVect) fixed

--- a/Gui/CMakeLists.txt
+++ b/Gui/CMakeLists.txt
@@ -243,7 +243,7 @@ INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
 # Create the library.
 ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
 ##MESSAGE ("${PROJECT_NAME} linked libraries: ${PROJECT_LIBS}")
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS} GPUAPI)
 
 # this is necessaty to force MFL compilation....
 ##MESSAGE ("${PROJECT_NAME} dependencies: ${MFL_BUILD_TARGETS}")
