"_BES" suffix removed from mafPipeMeshSlice_BES and vtkMAFMeshCutter_BES

--- a/Testing/VME/CMakeLists.txt
+++ b/Testing/VME/CMakeLists.txt
@@ -88,7 +88,7 @@ SET(PROJECT_SRCS
 	mafVMESurfaceEditorTest.h mafVMESurfaceEditorTest.cpp
 	mafPipePolylineGraphEditorTest.h mafPipePolylineGraphEditorTest.cpp
 	mafVMEPolylineEditorTest.h mafVMEPolylineEditorTest.cpp
-	mafPipeMeshSlice_BESTest.h mafPipeMeshSlice_BESTest.cpp
+	mafPipeMeshSliceTest.h mafPipeMeshSliceTest.cpp
 	mafPipeSurfaceSlice_BESTest.h mafPipeSurfaceSlice_BESTest.cpp
 	mafPipeVolumeSliceTest.h mafPipeVolumeSliceTest.cpp
 	mafVMEMapsTest.h mafVMEMapsTest.cpp
