--- a/Testing/vtkMAF/CMakeLists.txt
+++ b/Testing/vtkMAF/CMakeLists.txt
@@ -58,7 +58,7 @@ SET(PROJECT_SRCS
 	vtkMAFVolumeTextureMapper2DTest.h vtkMAFVolumeTextureMapper2DTest.cpp
 	vtkMAFDataArrayDescriptorTest.h vtkMAFDataArrayDescriptorTest.cpp
 	vtkMAFErythrocyteSourceTest.h vtkMAFErythrocyteSourceTest.cpp
-	vtkMAFMeshCutter_BESTest.h vtkMAFMeshCutter_BESTest.cpp
+	vtkMAFMeshCutterTest.h vtkMAFMeshCutterTest.cpp
 	vtkMAFFillingHoleTest.h vtkMAFFillingHoleTest.cpp
 	vtkMAFFixTopologyTest.h vtkMAFFixTopologyTest.cpp
 	vtkMAFLandmarkCloudOutlineCornerFilterTest.h vtkMAFLandmarkCloudOutlineCornerFilterTest.cpp
