Fix installer folder

--- a/Examples/ExampleApp/Installer/APPInstallerScript.nsi.in
+++ b/Examples/ExampleApp/Installer/APPInstallerScript.nsi.in
@@ -7,7 +7,7 @@
 !define PRODUCT_EXE_NAME "${PRODUCT_NAME}.exe"
 ;!define PRODUCT_MANUAL_DIR "@MANUAL_HTML_DIR@"
 
-!define PRODUCT_EXECUTABLE_OUTPUT_PATH_WIN "@APP_INSTALLER_EXECUTABLE_OUTPUT_DIR_WIN@\Debug"
+!define PRODUCT_EXECUTABLE_OUTPUT_PATH_WIN "@APP_INSTALLER_EXECUTABLE_OUTPUT_DIR_WIN@\Release"
 !define PRODUCT_INSTALLER_DIR_WIN "@APP_INSTALLER_DIR_WIN@"
 
 !include InstallerCommon.nsh
