Created ServiceManager Project

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -10,79 +10,50 @@ DBG_MESSAGE("Configuring project mafCore")
 SET(PROJECT_SRCS
 #sorted_vector.h
 mafBase.h
-mafDecl.cpp
-mafDecl.h
+mafDecl.cpp				mafDecl.h
 mafDbg.h
 mafDataChecksum.h
-mafDefines.cpp
-mafDefines.h
-mafDirectory.cpp
-mafDirectory.h
-mafDynamicLoader.cpp
-mafDynamicLoader.h
-mafEventBase.cpp
-mafEventBase.h
+mafDefines.cpp			mafDefines.h
+mafDirectory.cpp		mafDirectory.h
+mafDynamicLoader.cpp	mafDynamicLoader.h
+mafEventBase.cpp		mafEventBase.h
 mafEventSender.h
-mafEventSource.cpp
-mafEventSource.h
+mafEventSource.cpp		mafEventSource.h
 mafIncludeWIN32.h
 mafIncludeWX.h
-mafIndent.cpp
-mafIndent.h
-mafLUTLibrary.cpp
-mafLUTLibrary.h
-mafMTime.cpp
-mafMTime.h
-mafMatrix.cpp
-mafMatrix.h
-mafMatrix3x3.cpp
-mafMatrix3x3.h
-mafVect3d.cpp
-mafVect3d.h
-mafMultiThreader.h
-mafMultiThreader.cpp
-mafMutexLock.cpp
-mafMutexLock.h
-mafOBB.cpp
-mafOBB.h
-mafObject.cpp
-mafObject.h
-mafObjectFactory.cpp
-mafObjectFactory.h
-mafObserver.cpp
-mafObserver.h
-mafObserverCallback.cpp
-mafObserverCallback.h
-mafReferenceCounted.cpp
-mafReferenceCounted.h
+mafIndent.cpp			mafIndent.h
+mafLUTLibrary.cpp		mafLUTLibrary.h
+mafMTime.cpp			mafMTime.h
+mafMatrix.cpp			mafMatrix.h
+mafMatrix3x3.cpp		mafMatrix3x3.h
+mafVect3d.cpp			mafVect3d.h
+mafMultiThreader.cpp	mafMultiThreader.h
+mafMutexLock.cpp		mafMutexLock.h
+mafOBB.cpp				mafOBB.h
+mafObject.cpp			mafObject.h
+mafObjectFactory.cpp	mafObjectFactory.h
+mafObserver.cpp			mafObserver.h
+mafObserverCallback.cpp	mafObserverCallback.h
+mafReferenceCounted.cpp	mafReferenceCounted.h
 mafSmartPointer.h
-mafString.cpp
-mafString.h
-mafTimeStamped.cpp
-mafTimeStamped.h
-mafTransform.cpp
-mafTransform.h
-mafTransformBase.cpp
-mafTransformBase.h
-mafTransformFrame.cpp
-mafTransformFrame.h
+mafString.cpp			mafString.h
+mafTimeStamped.cpp		mafTimeStamped.h
+mafTransform.cpp		mafTransform.h
+mafTransformBase.cpp	mafTransformBase.h
+mafTransformFrame.cpp	mafTransformFrame.h
 mafVector.h
 mafVersion.h
-mmuIdFactory.cpp
-mmuIdFactory.h
+mmuIdFactory.cpp		mmuIdFactory.h
 mafUtility.h
 vtkMAFSmartPointer.h
 vtkMAFToLinearTransform.h
-mafZipUtility.cpp
-mafZipUtility.h
-
+mafZipUtility.cpp		mafZipUtility.h
 )
 
 IF (MAF_USE_VTK)
   SET(PROJECT_SRCS
     ${PROJECT_SRCS}
-    vtkMAFToLinearTransform.cxx
-    vtkMAFToLinearTransform.h
+    vtkMAFToLinearTransform.cxx		vtkMAFToLinearTransform.h
     vtkMAFSmartPointer.h
   )
 ENDIF (MAF_USE_VTK)
@@ -97,6 +68,8 @@ ENDIF (MAF_USE_VTK)
 # Create the library.
 ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+
+ADD_DEPENDENCIES(${PROJECT_NAME} mafService)
 
 IF (MAF_USE_VTK)
   ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_VTK_LIBRARY)
