--- a/Examples/ExampleApp/CMakeLists.txt
+++ b/Examples/ExampleApp/CMakeLists.txt
@@ -64,11 +64,11 @@ ENDIF (WIN32)
 
 IF(MAF_BUILD_MAFDLL)
   SET(PROJECT_LIBS
-  mafOperations mafGui mafViews mafVME mafInteraction mafCommon
+  mafOperations mafGui mafViews mafVME mafInteraction mafCommon mafService
 )
 ELSE(MAF_BUILD_MAFDLL)
   SET(PROJECT_LIBS
-  mafOperations mafGui mafViews mafVME mafInteraction mafCommon vtkMAF GPUAPI
+  mafOperations mafGui mafViews mafVME mafInteraction mafCommon mafService vtkMAF GPUAPI
 )
 ENDIF(MAF_BUILD_MAFDLL)
 
