--- a/IO/CMakeLists.txt
+++ b/IO/CMakeLists.txt
@@ -8,16 +8,11 @@ DBG_MESSAGE("Configuring project mafIO")
 
 # Set your list of sources here.
 SET(PROJECT_SRCS
-  mafCurlUtility.cpp
-  mafCurlUtility.h
-  mafStorable.cpp
-  mafStorable.h
-  mafStorage.cpp
-  mafStorage.h
-  mafStorageElement.cpp
-  mafStorageElement.h
-  mmuDOMTreeErrorReporter.h
-  mmuDOMTreeErrorReporter.cpp
+  mafCurlUtility.cpp  			mafCurlUtility.h
+  mafStorable.cpp  				mafStorable.h
+  mafStorage.cpp  				mafStorage.h
+  mafStorageElement.cpp  		mafStorageElement.h
+  mmuDOMTreeErrorReporter.h  	mmuDOMTreeErrorReporter.cpp
 )
 
 # IO classes for VTK related objects
@@ -39,12 +34,9 @@ ENDIF (BUILD_SHARED_LIBS)
 IF (MAF_USE_XercesC)
   SET(PROJECT_SRCS
     ${PROJECT_SRCS}
-    mafXMLElement.cpp
-    mafXMLElement.h
-    mafXMLStorage.cpp
-    mafXMLStorage.h
-    mafXMLString.cpp
-    mafXMLString.h
+    mafXMLElement.cpp    		mafXMLElement.h
+    mafXMLStorage.cpp    		mafXMLStorage.h
+    mafXMLString.cpp    		mafXMLString.h
     mmuXMLDOM.h
     mmuXMLDOMElement.h
   )
@@ -66,6 +58,8 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
 #IF (MAF_USE_WX)
   # --- va messo solo se wx e' compilato internamente --- ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_WXWIN_LIBRARY)
 #ENDIF (MAF_USE_WX)
+
+ADD_DEPENDENCIES(${PROJECT_NAME} mafService)
 
 IF (MAF_USE_XercesC)
   ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_XercesC_LIBRARY)
